# tesis-umpe-supermarket-stock-prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  ONNX_INTEGRATION_SUMMARY.md  README.md  SSH_AGENT_SETUP.md  add_ssh_keys.ps1  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup_ssh_agent.ps1  test_api.http
.claude/: settings.local.json
.docs/: app_web_integration.md  arquitectura_proyecto.md  containers.md  data_serving_architecture.md  demo_web_integration.md  e2e_validation.md  next_phases_plan.md  onyx_integration.md  precompute_features_pipeline.md  project_completion_phases.md
.docs/diagrams/: agent_diagram.puml  current_system_architecture.puml  high_level_diagram.puml  mcp_server.puml
.github/workflows/: check_source_branch.yml  ci.yml  claude-code-review.yml  claude.yml  container-smoke-test.yml  deploy.yml  lint.yml  restrict-pr-to-main.yml  security.yml  source_check_validation.yml  test.yml  typecheck.yml
.notebooks/: Analisis_Exploratorio_Ecuador_Sales_Forecast.ipynb  Copy of Store Sales Forecasting  Global_Simple_LightGBM_Timeseries_Forecast_Final.ipynb  Global_Simple_LightGBM_Timeseries_Forecast_Final_academic.ipynb  Global_Simple_LightGBM_Timeseries_Forecast_academic.ipynb  Global_Simple_LightGBM_Timeseries_Forecast_usar.ipynb  Modelo_Global_LightGBM_Forecast_Final.ipynb  analisis_exploratorio_ecuador_sales_forecast.ipynb  analisis_exploratorio_ecuador_sales_forecast_academic.ipynb  global_simple_lightgbm_timeseries_forecast_usar.py  store_sales_forecasting.ipynb
agent/: __init__.py
app-web/: Dockerfile  index.html  nginx.conf
app-web/assets/: chat.js  style.css
demo/: index.html  nginx.conf
demo/assets/: chat.js  style.css
docs/: ABREVIATURAS_SIGLAS.md  ARCHITECTURE_FIGURES.md  BIBLIOGRAPHY_SEED.md  CITATION_STYLE.md  CITATION_TRACEABILITY.md  EDA_FIGURES.md  EVIDENCE_MAP.md  GLOSARIO_MINIMO.md  LGBM_CV_EVIDENCE.md  LISTA_DE_ANEXOS.md  LISTA_DE_FIGURAS.md  LISTA_DE_TABLAS.md  LITERATURE_MATRIX.md  MANUSCRIPT_NUMBERING.md  NOTEBOOKS.md  PALABRAS_CLAVE.md  RESULTS_SUMMARY.md  SECTION_WEAKNESSES.md  TRIBUNAL_REVIEW.md  anexo_reproducibilidad_operativa.md  arquitectura_implementacion.md  conclusiones.md  eda.md  estado_arte_conceptos.md  experimentos.md  introduccion.md  metodologia.md  references_seed.bib  resumen.md  thesis_manuscript.docx  thesis_manuscript.md  thesis_outline.md  validacion_reproducibilidad.md
docs/figures/architecture/: README.md
docs/figures/eda/: README.md
scripts/: containers.bat  containers.sh  e2e_validate.bat  e2e_validate.sh  precompute_features.py
server/: __init__.py  config.py  main.py
server/application/: __init__.py  dto.py  ports.py  services.py
server/application/use_cases/: __init__.py  predict_stock.py
server/domain/: __init__.py  entities.py  exceptions.py  interfaces.py
server/infrastructure/: __init__.py  config.py  container.py  logging.py  models.py  processors.py
server/infrastructure/data/: __init__.py  parquet_repository.py
server/infrastructure/models/: __init__.py  dummy_model.py  onnx_model.py  sklearn_model.py  torch_model.py
server/infrastructure/postprocessing/: __init__.py  basic_postprocessor.py  production_postprocessor.py
server/infrastructure/preprocessing/: __init__.py  basic_preprocessor.py  production_preprocessor.py
server/interface/: __init__.py  controllers.py  schemas.py
server/interface/http/: __init__.py  api.py  metrics.py  middleware.py  schemas.py
server/models/: README.md  example_model.onnx  lightgbm_model.onnx
server/tests/: conftest.py  test_api.py  test_basic_postprocessor.py  test_basic_preprocessor.py  test_config.py  test_container.py  test_dto.py  test_dummy_model.py  test_entities.py  test_exceptions.py  test_integration.py  test_logging.py  test_main.py  test_mcp.py  test_metrics.py  test_middleware.py  test_onnx_model.py  test_parquet_repository.py  test_predict_stock_use_case.py  test_production_postprocessor.py  test_production_preprocessor.py  test_schemas.py
tmp/docs/: markdown_to_docx.py
