[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesis-umpe-supermarket-stock-prediction"
version = "0.1.0"
description = "Supermarket stock prediction server (Clean Architecture)."
readme = "README.md"
authors = [{ name = "UMPE Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.6,<3.0",
    "onnx>=1.20.0",
    "onnxruntime>=1.18,<2.0",
    "scikit-learn>=1.4,<2.0",
    "skl2onnx>=1.16,<2.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = ["D100", "D104", "D401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = []

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["server/tests"]
pythonpath = ["."]
