[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tesis-umpe-supermarket-stock-prediction"
version = "0.1.0"
description = "Supermarket stock prediction server (Clean Architecture)."
readme = "README.md"
authors = [{ name = "UMPE Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.32",
    "pydantic>=2.6,<3.0",
    "onnxruntime>=1.18,<2.0",
    "fastapi-mcp>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-anyio>=0.0.0",
    "anyio>=4.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "isort>=5.13",
    "pre-commit>=3.7",
]
training = [
    "scikit-learn>=1.4,<2.0",
    "skl2onnx>=1.16,<2.0",
    "joblib>=1.3,<2.0",
    "onnx>=1.20.0",
]

[tool.setuptools.packages.find]
include = ["server*", "agent*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "D"]
ignore = ["D100", "D104", "D203", "D213", "D401"]

[tool.ruff.lint.per-file-ignores]
"server/tests/**/*.py" = ["D101", "D102", "D103", "D107"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
plugins = []

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["server/tests"]
pythonpath = ["."]
